# waterlily

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.md  RPGtk.h  SECURITY.md  Waterlily.c  Waterlily.h
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml  codeql.yml
Example/: CMakeLists.txt  Main.c
Example/Resources/Shaders/: default.frag  default.vert
Example/Source/: Example.c
Include/: RPGtk.h  Waterlily.h  WaterlilyRaw.h
Source/: Assets.c  Deinitialize.c  Engine.c  Files.c  Initialize.c  Input.c  Internal.h  Log.c  Public.c  RPGtk.c  Run.c  Surface.c  Vulkan.c  Waterlily.c  Window.c
Source/Engine/: Digest.c  Log.c  Setup.c
Source/Files/: Execute.c  Exists.c  Measure.c  Open.c  Read.c  Remove.c
Source/Input/: CheckKeys.c  CreateContext.c  Destroy.c  SetKeymap.c  UpdateModifiers.c
Source/Old/: Assets.c
Source/Old/Vulkan/: Pipeline.c  Shaders.c  Vulkan.c
Source/Targets/Wayland/: Vulkan.c  Window.c
Source/Targets/X11/: Vulkan.c  Window.c
Source/Vulkan/: Create.c  Destroy.c  Render.c  Sync.c
Source/Vulkan/Commands/: BeginRenderpass.c  CreateBuffers.c  CreateSyncs.c  DestroyBuffers.c  DestroySyncs.c  RecordBuffer.c
Source/Vulkan/GPU/: CreateLogical.c  Destroy.c  GetPhysical.c
Source/Vulkan/Pipeline/: Create.c  CreateLayout.c  CreateRenderpass.c  Destroy.c  FillInPipeline.c  SetupShaders.c
Source/Vulkan/Surface/: CreateSurface.c  Destroy.c  GetCapabilities.c  GetExtent.c  GetFormat.c  GetMode.c  Wayland.c  X11.c
Source/Vulkan/Swapchain/: Create.c  CreateFramebuffers.c  Destroy.c  Partition.c  Recreate.c
Source/Window/: Create.c  Destroy.c  Process.c  Resized.c  Wayland.c  X11.c
docs/archives/: assets.md
include/: waterlily.h
include/archiver/: compressor.h  parser.h  shaders.h
include/internal/: config.h  files.h  input.h  logging.h  vulkan.h  window.h
src/: archiver.c  engine.c  files.c  input.c  internal.h  public.c  vulkan.c  waterlily.c  window.c
src/archiver/: compressor.c  parser.c  shaders.c
src/internal/: config.c  files.c  files.h  input.c  logging.c  vulkan.c  window.c
